Thu Nov 28 07:57:12 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* orbsvcs/orbsvcs/Notify/Admin.h:
	* orbsvcs/orbsvcs/Notify/EventChannel.h:
	* orbsvcs/orbsvcs/Notify/EventChannelFactory.h:
	* orbsvcs/orbsvcs/Notify/Proxy.h: Added missing includes to
	  compile a bit better on VC 7.0. Thanks to Tommy Andreasen
	  <tommy.andreasen@radiometer.dk> for providing patches.

Thu Nov 28 07:40:16 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* tests/OBV/TC_Alignment/server.cpp: Fixed fuzz errors.

Thu Nov 28 07:03:12 UTC 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/OBV/Any/client.bor:
        * tests/OBV/Any/server.bor:
          Fix errors in these bcb makefiles.

Wed Nov 27 22:31:34 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* tests/Bug_1361_Regression/Server_Thread_Pool.h:
	* tests/Bug_1361_Regression/Server_Thread_Pool.cpp: Converted the
	  usage of ACE_SYNCH_MUTEX to ACE_SYNCH. Missed that
	  Message_Queue needs a condition variable in addition to the
	  mutex.

Wed Nov 27 18:58:25 2002  Jeff Parsons <j.parsons@vanderbilt.edu>

        * orbsvcs/orbsvcs/CosNotification_Static.dsp:

          Fixed project settings.

Wed Nov 27 18:32:31 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* tests/OBV/TC_Alignment/Makefile:
	* tests/OBV/TC_Alignment/client.cpp: Fixed problems in g++ builds.

Wed Nov 27 15:22:13 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* tests/Bug_1361_Regression/Server_Thread_Pool.cpp: Fixed a
	  warning from our daily builds.

Wed Nov 27 14:02:16 2002  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tests/OBV/TC_Alignment/Makefile:

          Applied patch sent by Criag Rodrigues <crodrigu@bbn.com>.

Wed Nov 27 13:45:32 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* orbsvcs/orbsvcs/Log/NotifyLog_i.h: Fixed conflicts the files.
